# your-claude-engineer

./: .env.example  .gitignore  agent.py  arcade_config.py  authorize_arcade.py  autonomous_agent_demo.py  client.py  hooks.py  learnings.py  linear_status.py  merge.py  parallel.py  parallel_progress.py  project.json  queue_runner.py  scheduler.py  security.py  slack_notify.py  worker.py
generations/metroplex-ideaforge-100/: .codebase_learnings.json  init.sh  pyproject.toml  requirements.txt
generations/metroplex-ideaforge-100/src/mcp_obs/: __init__.py  main.py
generations/metroplex-ideaforge-100/src/mcp_obs/analysis/: __init__.py  effectiveness_scorer.py
generations/metroplex-ideaforge-100/src/mcp_obs/dashboard/: __init__.py
generations/metroplex-ideaforge-100/src/mcp_obs/dashboard/replay/: __init__.py  session_player.py
generations/metroplex-ideaforge-100/src/mcp_obs/server/: __init__.py  mcp_server.py  tool_interceptor.py  trace_collector.py
generations/metroplex-ideaforge-100/src/mcp_obs/storage/: __init__.py  database.py  models.py
generations/metroplex-ideaforge-100/src/mcp_obs/utils/: __init__.py  config.py  pricing.py  seed_test_data.py
generations/metroplex-ideaforge-100/tests/: __init__.py  conftest.py
generations/metroplex-ideaforge-132/: .codebase_learnings.json  .gitignore  .linear_project.json  README.md  init.sh  pyproject.toml  requirements-dev.txt  requirements.txt
generations/metroplex-ideaforge-132/schemas/: agent_skills_v1.json  mcp_tool_schema.json
generations/metroplex-ideaforge-132/screenshots/: M2A-281-cli-help.txt  M2A-281-cli-init-help.txt  M2A-281-cli-publish-help.txt  M2A-281-final-report.md  M2A-281-implementation-summary.md  M2A-281-test-results.txt  M2A-282-cli-help.txt  M2A-282-code-snippets.txt  M2A-282-install-help.txt  M2A-282-install-output.txt  M2A-282-list-help.txt  M2A-282-list-installed.txt  M2A-282-search-help.txt  M2A-282-search-results.txt  M2A-282-security-fixes-complete.txt  M2A-283-code-review-fixes-summary.txt  M2A-283-code-review-fixes-test-results.txt  M2A-283-code-snippets.txt  M2A-283-implementation-report.txt  M2A-283-regression-test-report.txt  M2A-283-test-output.txt  M2A-283-test-results.txt  cache-security-tests.txt  cli-test-output.txt  edge-case-tests.txt  regression-cli-help.txt  regression-execution-history.txt  regression-logs-help.txt  regression-mcp-requests.txt  regression-serve-help.txt  regression-test-full-suite.txt  security-fixes-verification.txt  security-tests.txt  test-report.md  test1-version.txt  test5-validate.txt  test7-pytest.txt  verification-report.txt
generations/metroplex-ideaforge-132/src/skillhub/: __init__.py
generations/metroplex-ideaforge-132/src/skillhub/cli/: __init__.py  main.py  utils.py
generations/metroplex-ideaforge-132/src/skillhub/core/: __init__.py  cache.py  dependency_resolver.py  mcp_server.py  models.py  packaging.py  registry.py  validation.py
generations/metroplex-ideaforge-132/tests/: __init__.py  conftest.py  test_cli_commands.py  test_dependency_resolution.py  test_install.py  test_mcp_server.py  test_packaging.py  test_registry.py  test_skill_validation.py
(+85 files in other folders)
